Design: Fixes to hero image sizes to prevent overlapping Content: Correct an inconsistent "focused" with one S

--- a/assets/_scss/overrides/_override.hero-header.scss
+++ b/assets/_scss/overrides/_override.hero-header.scss
@@ -1,9 +1,8 @@
-$color__accent: #0087CC;
-$color__teal: #00a4b4;
-
 .hero-header {
 
     &__content {
+        display: flex;
+        flex-direction: column;
         position: relative;
     }
 
@@ -16,11 +15,9 @@ $color__teal: #00a4b4;
 
     &__image {
         display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: -20px;
+        margin: 14px auto;
         max-width: 85%;
-        max-height: 100%;
+        max-height: 350px;
     }
 
     h1 {
@@ -41,21 +38,21 @@ $color__teal: #00a4b4;
 
 @include media-query(medium) {
     .hero-header__image {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        margin-top: 0;
-        max-width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 33%;
     }
 
     .hero-header__content {
         min-height: 210px;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
     .hero-header__title {
         margin: 28px 0 35px;
-        max-width: 470px;
-
+        max-width: calc(66% - 30px);
         position: relative;
         z-index: 5000;
     }
@@ -66,9 +63,27 @@ $color__teal: #00a4b4;
 }
 
 @include media-query(large) {
-
     .hero-header__title {
         margin: 56px 0 89px;
-        max-width: 680px;
+    }
+}
+
+@include media-query(xlarge) {
+    .hero-header__title {
+        max-width: calc(66% - 30px);
+    }
+
+    .hero-header__image {
+        max-width: 33%;
+    }
+}
+
+@supports not (display: flex) {
+    @include media-query(medium) {
+        .hero-header__image {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
     }
 }
